--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # Modified from:
 #     https://github.com/github/gitignore/blob/master/Unity.gitignore
 
-/[Ll]ibrary/
-/[Uu]serSettings/
+[Ll]ibrary/
+[Uu]serSettings/
 [Tt]emp/
 [Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
+[Bb]uild/
+[Bb]uilds/
+[Ll]ogs/
 /[Mm]emoryCaptures/
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
@@ -60,4 +60,4 @@ Thumbs.db.meta
 *.DS_Store
 
 # VS Code
-*.vscode
+# *.vscode
