Proto2: Adding enemies and cinemachine

--- a/Prototype2/Packages/manifest.json
+++ b/Prototype2/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.8.9",
     "com.unity.collab-proxy": "1.17.2",
     "com.unity.connect.share": "4.2.3",
     "com.unity.feature.2d": "1.0.0",
