--- a/Base/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/Base/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -21,7 +21,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"/Users/dhrumilsheth/CSCI-526/Base/WebGL Builds/session-4;/Users/rudra/Code/CS526/Builds/09302022;/Users/voosowmy/Documents/GitHub/CSCI-526/Base/WebGL Builds;/Users/paramthakker/Desktop/CSCI-526/Base/WebGL Builds/Build;/Users/rudra/Code/CS526/Builds/09222022;/Users/nikhil.chakravartula/personal/csci526latest/Base/WebGL Builds;/Users/nikhilchakravartula/Documents/programming/Unity/CSCI-526-latest/CSCI-526/Base/WebGL Builds;;;\"}"
+                "value": "{\"m_Value\":\"/Users/sudharshannagarajan/Desktop/My project (2)/WebGL Builds;/Users/dhrumilsheth/CSCI-526/Base/WebGL Builds/session-4;/Users/rudra/Code/CS526/Builds/09302022;/Users/voosowmy/Documents/GitHub/CSCI-526/Base/WebGL Builds;/Users/paramthakker/Desktop/CSCI-526/Base/WebGL Builds/Build;/Users/rudra/Code/CS526/Builds/09222022;/Users/nikhil.chakravartula/personal/csci526latest/Base/WebGL Builds;/Users/nikhilchakravartula/Documents/programming/Unity/CSCI-526-latest/CSCI-526/Base/WebGL Builds;;\"}"
             }
         ]
     }
