--- a/XScape/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/XScape/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -11,6 +11,11 @@
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "firstTime",
+                "value": "{\"m_Value\":false}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "autoPublish",
                 "value": "{\"m_Value\":true}"
             }
         ]
