--- a/XScape/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/XScape/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -6,7 +6,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"/Users/rudra/Code/CS526/Builds/XScape_rudra_l1;/Users/rudra/Code/CS526/Builds/10122022;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"/Users/rudra/Code/CS526/Builds/XScape_rudra_l2/XScape_rudra_l2;/Users/rudra/Code/CS526/Builds/10122022;;;;;;;;\"}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -16,6 +16,11 @@
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "autoPublish",
+                "value": "{\"m_Value\":true}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "createDefaultBuildsFolder",
                 "value": "{\"m_Value\":true}"
             }
         ]
