--- a/XScape/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/XScape/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -6,7 +6,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"D:/CSCI-526/Latest/CSCI-526/XScape/WebGL Builds/final_build2;/Users/rudra/Code/CS526/Builds/11232022/11232022/11232022;/Users/sudharshannagarajan/Documents/GitHub/CSCI-526/XScape/WebGL Builds;D:/CSCI-526/Latest/CSCI-526/XScape/WebGL Builds/new_build_dp;D:/CSCI-526/Latest/CSCI-526/XScape/WebGL Builds/new_build;/Users/rudra/Code/CS526/Builds/10202022;/Users/nikhil.chakravartula/personal/csci526temp/XScape/WebGL Builds/20Oct;/Users/heramb/Desktop/Games/CSCI-526/XScape/WebGL Builds;/Users/rudra/Code/CS526/Builds/Platform_fix/XScape_ru;/Users/nikhil.chakravartula/personal/csci526temp/XScape/WebGL Builds/Builds/Final_Levels\"}"
+                "value": "{\"m_Value\":\"D:/CSCI-526/Latest/CSCI-526/XScape/WebGL Builds/final_build1;D:/CSCI-526/Latest/CSCI-526/XScape/WebGL Builds/final_build2;/Users/rudra/Code/CS526/Builds/11232022/11232022/11232022;/Users/sudharshannagarajan/Documents/GitHub/CSCI-526/XScape/WebGL Builds;D:/CSCI-526/Latest/CSCI-526/XScape/WebGL Builds/new_build_dp;D:/CSCI-526/Latest/CSCI-526/XScape/WebGL Builds/new_build;/Users/rudra/Code/CS526/Builds/10202022;/Users/nikhil.chakravartula/personal/csci526temp/XScape/WebGL Builds/20Oct;/Users/heramb/Desktop/Games/CSCI-526/XScape/WebGL Builds;/Users/rudra/Code/CS526/Builds/Platform_fix/XScape_ru\"}"
             },
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
