Added skybox for L20

--- a/XScape/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/XScape/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -226,7 +226,7 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize",
-                "value": "{\"m_Value\":{\"x\":5.0,\"y\":10.0,\"z\":2.0}}"
+                "value": "{\"m_Value\":{\"x\":-6.5253143310546879,\"y\":9.485214233398438,\"z\":0.3092689514160156}}"
             },
             {
                 "type": "UnityEngine.Quaternion, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
